# kadabra-runes

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  INSTALL.md  LICENSE  PUBLISHING.md  README.md  release.toml
.github/workflows/: ci.yml  quick-test.yml  release.yml
src/: config.rs  error.rs  lib.rs  main.rs
src/lsp/: client.rs  mod.rs  types.rs
src/mcp/: mod.rs  server.rs  tools.rs
tests/: integration_test.rs  lsp_client_test.rs  mcp_tool_test.rs
tests/common/: lsp_harness.rs  mod.rs  temp_workspace.rs
tests/fixtures/sample_project/: Cargo.toml
tests/fixtures/sample_project/src/: calculator.rs  lib.rs  main.rs
